app/src/main/java/com/example/wocombo/core/domain/errors/ServerCommunicationsFailures.kt
package com.example.wocombo.core.domain.errors

import com.example.wocombo.common.functional.Failure


sealed class CommunicationsFailures {
    object NoInternetFailure : Failure.FeatureFailure()
    object ConnectionFailure : Failure.FeatureFailure()
    object InternalServerFailure : Failure.FeatureFailure()
}